samples/_failures_safe/1761460959_c25af7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39e07ae1.c: In function ‘main’:
./samples/SAFE/__tmp_39e07ae1.c:145:12: error: missing terminating " character
  145 |     printf("Enter target
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_39e07ae1.c:145:5: error: expected expression at end of input
  145 |     printf("Enter target
      |     ^~~~~~
./samples/SAFE/__tmp_39e07ae1.c:145:5: error: expected declaration or statement at end of input
